fixed input bar alignment

--- a/docs/css/dark-base.css
+++ b/docs/css/dark-base.css
@@ -85,7 +85,9 @@ nav{
 }
 .custom-dark-search{
   color:#f2f2f2;
-  height:100% !important;
+}
+li .input-field{
+  height: 64px !important;
 }
 .custom-dark-search:focus{
   background-color:#e6e6e6;
